<resources>
    <string name="welcome_message1">Welcome to our</string>
    <string name="welcome_massage2">TravelMate</string>
    <string name="welcome_message3">App</string>
    <string name="app_name">TravelMate</string>
    <string name="todo">TODO</string>
    <string name="t1">Our goal is to always provide you
with a safe journey</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="lets">Let’s get started</string>
    <string name="connect_using_google">Connect using Google</string>
    <string name="connect_using_facebook">Connect using Facebook</string>
    <string name="let_s_get_started">Let’s get started</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don”t have an account?</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="todo5">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="already_a_user">Already a user?</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="congratulation">Congratulation !</string>
    <string name="start_traveling_now">Start traveling now</string>
    <string name="quot_congratulations_your_profile_is_ready_start_exploring_sri_lanka_s_top_destinations_with_travelmate_safe_travels_and_happy_exploring_quot">\"Congratulations! Your profile is ready. Start exploring Sri Lanka\'s top destinations with TravelMate. Safe travels and happy exploring!\"</string>
    <string name="todod">TODO</string>
    <string name="todohf">TODO</string>
    <string name="todof">TODO</string>
    <string name="_10_best_places_to_visit_in_sri_lanka">10 Best Places to Visit in Sri Lanka</string>
    <string name="best_tourist_places">Best Tourist Places</string>
    <string name="top_hill_stations">Top Hill Stations</string>
    <string name="sacred_pilgrimage_sites">Sacred Pilgrimage Sites</string>
    <string name="famous_heritage_sites">Famous Heritage Sites</string>
    <string name="list_view">List View</string>
    <string name="todoff">TODO</string>
    <string name="image_desc" />
    <string name="description">Description</string>
    <string name="todohdh">TODO</string>
    <string name="book_trip"><![CDATA[Book Trip >>]]></string>
    <string name="more">More</string>
    <string name="click_here">Click Here</string>
    <string name="location">Location</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="time">Time</string>
    <string name="request_quote">Request Quote</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancel">Cancel</string>
    <string name="destination">Destination</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="confirm">Confirm</string>
    <string name="request">Request</string>
    <string name="amount">Amount</string>
    <string name="pick_up_location">Pick Up Location :</string>
    <string name="sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="enter_your_email">Enter your email</string>
</resources>