<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".activity.LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="39dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/let_s_get_started"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/purple"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="47dp"
        android:layout_height="20dp"
        android:text="@string/sign_up"
        android:textColor="#304FFE"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/todo3" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="264dp"
        android:background="@drawable/google_btn_border"
        android:hint="@string/e_mail_address"
        android:inputType="textWebEmailAddress"
        android:paddingStart="40dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="296dp"
        android:layout_height="92dp"
        android:layout_marginTop="344dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="297dp"
            android:layout_height="59dp"
            android:background="@drawable/google_btn_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="40dp"
            tools:ignore="MissingConstraints,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="512dp"
        android:background="@drawable/google_btn_border"
        android:backgroundTint="@color/blue"
        android:text="Sign in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="52dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>