<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".activity.Login_Page">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="209dp"
        android:background="@drawable/google_btn_border"
        android:drawableStart="@drawable/google"
        android:text="@string/connect_using_google"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="293dp"
        android:background="@drawable/google_btn_border"
        android:drawableStart="@drawable/facebook"
        android:text="@string/connect_using_facebook"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="377dp"
        android:background="@drawable/google_btn_border"
        android:drawableStart="@drawable/apple"
        android:text="Connect using Apple"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="588dp"
        android:background="@drawable/google_btn_border"
        android:backgroundTint="@color/blue"
        android:text="Sign in with E-mail"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="43dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/let_s_get_started"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="59dp"
        android:layout_marginTop="504dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/or"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="48dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/purple"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="47dp"
        android:layout_height="20dp"
        android:layout_marginStart="252dp"
        android:layout_marginBottom="48dp"
        android:text="@string/sign_up"
        android:textColor="#304FFE"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/todod" />

</androidx.constraintlayout.widget.ConstraintLayout>