<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".activity.LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:text="@string/already_a_user"
        android:textColor="@color/purple"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="47dp"
        android:layout_height="20dp"
        android:text="@string/sign_in"
        android:textColor="#304FFE"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/todo3" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/google_btn_border"
        android:hint="@string/e_mail_address"
        android:inputType="textWebEmailAddress"
        android:paddingStart="40dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="296dp"
        android:layout_height="92dp"
        android:layout_marginTop="392dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="297dp"
            android:layout_height="61dp"
            android:background="@drawable/google_btn_border"
            android:hint="@string/password"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:layout_marginTop="552dp"
        android:background="@drawable/google_btn_border"
        android:backgroundTint="@color/blue"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>